fix whitespace at beginning of reploutput lines

--- a/static/index.css
+++ b/static/index.css
@@ -20,4 +20,5 @@
 }
 #replinput, #reploutput {
 	font-family: monospace;
+	white-space: pre;
 }
